# PIPer

./: .gitmodules  LICENSE  README.md  pyproject.toml
piper/: hparams_entrypoint.py
piper/config/: envbench-graphs.yaml
piper/config/langgraph/: feedback-loop.yaml
piper/config/model/: custom-qwen3-8b.yaml
piper/config/reward/: fine-grained.yaml  llm-reward.yaml  strict-shellcheck.yaml
piper/data_preprocess/: envbench.py
piper/multi_turn/: langgraph_chat_scheduler.py
piper/multi_turn/tools/: shellcheck.py
piper/reward_score/envsetup/: llm_reward.py  llm_sandbox_reward.py  shellcheck.py
piper/reward_score/envsetup/fine_grained/: config_parsers.py  graph.py  reward.py
piper/reward_score/envsetup/sandbox_like_reward/: calc.py
piper/trainer/: multi_turn_main_ppo.py
piper/trainer/ppo/: ray_trainer_multi_turn.py  reward.py
